added questions to js and some css styling

--- a/index.html
+++ b/index.html
@@ -9,5 +9,18 @@
 </head>
 <body>
     <h1>Let's Play Trivia</h1>
+    <img src = "https://media.istockphoto.com/vectors/beautiful-female-teacher-in-the-red-dress-with-pointer-vector-id1169180239?k=20&m=1169180239&s=612x612&w=0&h=VYHPEklQES3mQBiujb9wkVQmZA7_8x1y5Zs6g8kBPeM=" alt="Teacher">
+    <section>
+        <p> Can you answer this question correctly?</p>
+        <div id ="myQuestion">""</div>
+    </section>
+    <div>
+        <p class = 'option1'>A</p>
+        <p class = 'option2'>B</p>
+        <p class = 'option3'>C</p>
+        <p class = 'option4'>D</p>
+    </div>
+
+<script src ="./project1.js"></script>
 </body>
 </html>
