--- a/index.html
+++ b/index.html
@@ -8,19 +8,13 @@
     <title>Milestone Project One</title>
 </head>
 <body>
-    <h1>Let's Play Trivia</h1>
-    <img src = "https://media.istockphoto.com/vectors/beautiful-female-teacher-in-the-red-dress-with-pointer-vector-id1169180239?k=20&m=1169180239&s=612x612&w=0&h=VYHPEklQES3mQBiujb9wkVQmZA7_8x1y5Zs6g8kBPeM=" alt="Teacher">
-    <section>
-        <p> Can you answer this question correctly?</p>
-        <div id ="myQuestion">""</div>
-    </section>
-    <div>
-        <p class = 'option1'>A</p>
-        <p class = 'option2'>B</p>
-        <p class = 'option3'>C</p>
-        <p class = 'option4'>D</p>
+    <!-- Game home page with start button -->
+    <div class="container">
+        <h1>Let's Play Trivia</h1>
+        <a href="./entergame.html" class="btn">START</a>
+        
     </div>
-
-<script src ="./project1.js"></script>
+    <img src = "./assets/teacher_img-removebg-preview (1).png" alt="Teacher">
+<script src ="./script.js"></script>
 </body>
 </html>
