added corrections to html, new html page and question card

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Game home page with start button -->
     <div class="container">
         <h1>Let's Play Trivia</h1>
-        <a href="./entergame.html" class="btn">START</a>
+        <a href="./game.html" class="btn">START</a>
         
     </div>
     <img src = "./assets/teacher_img-removebg-preview (1).png" alt="Teacher">
