added timer in javascript

--- a/game.html
+++ b/game.html
@@ -9,8 +9,11 @@
 </head>
 
 <body>
-    <!-- Question Container> -->
-    <div class ="container2">
+  
+    <!-- Question Container -->
+    <div class ="container2"> 
+         <!-- Timer -->
+    <p id = "countdown-timer">15</p>
         <div id ="question-container">
             <div class="question"><b>QUESTION</b></div>
             <div class="answer-buttons" id="btn-grid">
