editted index.html to specify/clarify div elements and deleted incorrect function codes from script.js

--- a/game.html
+++ b/game.html
@@ -15,7 +15,7 @@
          <!-- Timer -->
     <p id = "countdown-timer">15</p>
         <div id ="question-container">
-            <div class="question"><b>QUESTION</b></div>
+            <div class="question"></div>
             <div class="answer-buttons" id="btn-grid">
                     <button class="btn" type="button">Choice 1</button>
                     <button class="btn" type="button">Choice 2</button>
@@ -24,7 +24,7 @@
                   </div>
             </div>
             
-           <!-- Next and Previous button -->
+           <!-- Next button -->
             <div class="controls">
                 <!-- <button id="previous-btn">Previous</button> -->
                 <button id="next-btn">Next</button>
