--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>LET'S PLAY: TRIVIA</h1>
         <div class = "rules">
         <div class = "intro">The following are some rules you should know: </div>
-        <div class = "rule1">1. You have 12 seconds to answer each question. </div>
+        <div class = "rule1">1. You have <strong>15 seconds </strong>to answer each question. </div>
         <div class = "rule2">2. You will not be able to change your response once the timer is up. </div>
         <div class = "rule3">3. Your total score will be revealed at the end of the game! </div>
     </div>
