fixed display of answer choices and hid next button

--- a/game.html
+++ b/game.html
@@ -13,10 +13,11 @@
     <p id = "countdown-timer"></p>
     <!-- Question Container -->
         <div id ="container2">
-            <div id="trivia" class = "justify-canter flex-column">
+            <div id="trivia" class = "justify-center flex-column">
             <h2 id="question"><em>What is the answer to this question?</em></h2>
 
             <!-- answer-choices -->
+            <div id ="container3">
             <div class="answer_button">
                     <p class="answer">Choice 1</p>
                     </div>
@@ -30,11 +31,12 @@
                     <p class="answer">Choice 4</p>
                   </div>
             </div>
+            </div>
 
             <!-- Next button -->
             <div class="controls">
                 <!-- <button id="previous-btn">Previous</button> -->
-                <button id="next-btn">Next</button>
+                <button id="next-btn" class = "next-btn btn hide">NEXT</button>
             </div>
             </div>
         <script src ="./script.js"></script>
