--- a/game.html
+++ b/game.html
@@ -1,44 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./game.css">
-    <title>Trivia Game</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./game.css">
+        <title>Trivia Game</title>
 </head>
 
 <body>
-         <!-- Timer -->
-    <p id = "countdown-timer"></p>
-    <!-- Question Container -->
-        <div id ="container2">
-            <div id="trivia" class = "justify-center flex-column">
-            <h2 id="question"><em>What is the answer to this question?</em></h2>
+        <!-- Question Container -->
+        <div id="container">
+                <div id="trivia" class="justify-center flex-column">
+                        <div id="hud">
+                                <div id="hud-item">
+                                        <p class ="hud-prefix">QUESTION:</p>
+                                        <h1 class = "hud-main-text"></h1>
+                                </div>
+                                <div id="countdown-timer">
+                                <h6>Countdown:</h6>
+                                <h6 id="time">00</h6>
+                        </div>
+                        </div>
+                        <!-- TIMER -->
+                        
+                        <h2 id="question"><em>What is the answer to this question?</em></h2>
 
-            <!-- answer-choices -->
-            <div id ="container3">
-            <div class="answer_button">
-                    <p class="answer">Choice 1</p>
-                    </div>
-            <div class="answer_button">
-                    <p class="answer">Choice 2</p>
-                    </div>
-            <div class="answer_button">
-                    <p class="answer">Choice 3</p>
-                    </div>
-            <div class="answer_button">
-                    <p class="answer">Choice 4</p>
-                  </div>
-            </div>
-            </div>
+                        <!-- answer-choices -->
+                        <div class="container3" id="answer_button">
+                                <p class="answer" data-number="1">Choice 1</p>
+                                <p class="answer" data-number="2">Choice 2</p>
+                                <p class="answer" data-number="3">Choice 3</p>
+                                <p class="answer" data-number="4">Choice 4</p>
+                        </div>
+                        <!-- Next button and Scores -->
+                        <div class="controls">
+                                <!-- <button id="next-btn" class="next-btn btn hide">NEXT</button> -->
+                                <p id="total_correct">5 of 5 Questions</p>
+                        </div>
+                        <!-- Results Section -->
+                        <div id ="results">
+                                <h5>CONGRATULATIONS!</h5>
+                                <h6 id = "score">You got 5 out of 5!</h6>
+                        </div>
+                </div>
+        </div>
 
-            <!-- Next button -->
-            <div class="controls">
-                <!-- <button id="previous-btn">Previous</button> -->
-                <button id="next-btn" class = "next-btn btn hide">NEXT</button>
-            </div>
-            </div>
-        <script src ="./script.js"></script>
+        <script src="./script.js"></script>
 </body>
+
 </html>
