add HTML content to Javascript for results and time up page

--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
         <h1>LET'S PLAY: TRIVIA</h1>
         <div class = "rules">
         <div class = "intro">The following are some rules you should know: </div>
-        <div class = "rule1">1. You have <strong>15 seconds </strong>to answer each question. </div>
-        <div class = "rule2">2. You will not be able to change your response once the timer is up. </div>
+        <div class = "rule1">1. You have <strong><em> 60 seconds </strong></em> to answer 12 questions accurately! </div>
+        <div class = "rule2">2. You will not be able to change your response once selected. </div>
         <div class = "rule3">3. Your total score will be revealed at the end of the game! </div>
     </div>
 </div>
-        <a href="./game.html" class="start-btn">START</a>
-    
-    
+        <a href="./game.html" class="start-btn">LET'S PLAY!</a>
     <img src = "./assets/teacher_img-removebg-preview (1).png" alt="Teacher">
 <script src ="./script.js"></script>
 </body>
