--- a/game.html
+++ b/game.html
@@ -17,32 +17,28 @@
                                 <div id="hud-item">
                                         <p class ="hud-prefix">QUESTION:</p>
                                         <h1 class = "hud-main-text"></h1>
-                                </div>
+                                </div> 
+                                <!-- TIMER -->
                                 <div id="countdown-timer">
                                 <h6>Countdown:</h6>
                                 <h6 id="time">00</h6>
                         </div>
                         </div>
-                        <!-- TIMER -->
+                       
                         
                         <h2 id="question"><em>What is the answer to this question?</em></h2>
 
                         <!-- answer-choices -->
-                        <div class="container3" id="answer_button">
-                                <p class="answer" data-number="1">Choice 1</p>
-                                <p class="answer" data-number="2">Choice 2</p>
-                                <p class="answer" data-number="3">Choice 3</p>
-                                <p class="answer" data-number="4">Choice 4</p>
+                        <div class="container2" id="answer_button">
+                                <button class="answer" data-number="1">Choice 1</button>
+                                <button class="answer" data-number="2">Choice 2</button>
+                                <button class="answer" data-number="3">Choice 3</button>
+                                <button class="answer" data-number="4">Choice 4</button>
                         </div>
-                        <!-- Next button and Scores -->
+                        <!-- Scoreboard -->
                         <div class="controls">
-                                <!-- <button id="next-btn" class="next-btn btn hide">NEXT</button> -->
-                                <p id="total_correct">5 of 5 Questions</p>
-                        </div>
-                        <!-- Results Section -->
-                        <div id ="results">
-                                <h5>CONGRATULATIONS!</h5>
-                                <h6 id = "score">You got 5 out of 5!</h6>
+                                <button id="next-btn" class="next-btn btn hide">NEXT</button>
+                                <p id="total_correct"></p>
                         </div>
                 </div>
         </div>
