--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel ="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&family=Rampart+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&family=Rampart+One&display=swap"
+        rel="stylesheet">
     <title>Milestone Project One</title>
 </head>
+
 <body>
     <!-- Game home page with start button -->
     <div class="container">
         <h1>LET'S PLAY: TRIVIA</h1>
-        <div class = "rules">
-        <div class = "intro">The following are some rules you should know: </div>
-        <div class = "rule1">1. You have <strong><em> 60 seconds </strong></em> to answer 12 questions accurately! </div>
-        <div class = "rule2">2. You will not be able to change your response once selected. </div>
-        <div class = "rule3">3. Your total score will be revealed at the end of the game! </div>
+        <div class="rules">
+            <div class="intro">The following are some rules you should know: </div>
+            <ul>
+                <li>You have <strong><em> 60 seconds </strong></em> to answer <strong>12</strong> general
+                    knowledge questions accurately!</li>
+                <li>Click the button of the correct answer.</li>
+                <li>You will not be able to change your response once selected.</li>
+                <li>Your total score will be revealed at the end of the game! </li>
+            </ul>
+        </div>
     </div>
-</div>
-        <a href="./game.html" class="start-btn">LET'S PLAY!</a>
-    <img src = "./assets/teacher_img-removebg-preview (1).png" alt="Teacher">
-<script src ="./script.js"></script>
+    <a href="./game.html" class="start-btn">LET'S PLAY!</a>
+    <img src="./assets/teacher_img-removebg-preview (1).png" alt="Teacher">
+    <script src="./script.js"></script>
 </body>
+
 </html>
