--- a/game.html
+++ b/game.html
@@ -36,6 +36,8 @@
                                 <button class="answer" data-number="2">Choice 2</button>
                                 <button class="answer" data-number="3">Choice 3</button>
                                 <button class="answer" data-number="4">Choice 4</button>
+                                <audio id = "correct" src="./assets/607926__robinhood76__10661-bonus-correct-answer (1).wav"></audio>
+                                <audio id = "wrong" src="./assets/554053__gronkjaer__wronganswer.mp3"></audio>
                         </div>
                 </div>
         </div>
