added audio to intro page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- Game home page with start button -->
     <div class="container">
         <h1>LET'S PLAY: TRIVIA</h1>
+        <audio autoplay id = "intro" src="./assets/Relaxing-thinking-time-music.mp3"></audio>
         <div class="rules">
             <div class="intro">The following are some rules you should know: </div>
             <ul>
